--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>javamaven</groupId>
   <artifactId>project</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.3.1</version>
 
 <dependencies>
   <dependency>
@@ -19,6 +19,14 @@
 
 </dependencies>
   
+<distributionManagement>
+  <repository>
+    <id>github</id>
+    <name>GitHub Packages</name>
+    <url>https://maven.pkg.github.com/pramoedyasl/JavaMaven</url>
+  </repository>
+</distributionManagement>
+
   <properties>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
